translation-tool/inputs/source_meta/objects/Common_IntegrationEndPoints__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Created for Coomon repository by copy data from custom setting YAHS_PRT_IntegrationEndPoints</description>
    <fields>
        <fullName>EndPointUrl__c</fullName>
        <label>EndPointUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <label>Environment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common_IntegrationEndPoints</label>
</CustomObject>